QTranslationHelper replaces QTranslationUtils